--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
+    "instantsearch.js": "^2.0.2",
     "jquery": "^3.2.1",
     "ng-semantic": "^1.1.13",
     "ng2-semantic-ui": "^0.9.2",
