--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^4.0.0-rc.2",
     "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.3.0",
+    "firebase-tools": "^3.9.2",
     "instantsearch.js": "^2.0.2",
     "jquery": "^3.2.1",
     "ng-semantic": "^1.1.13",
