--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/jquery": "^3.2.12",
+    "angular2-materialize": "^15.1.9",
     "core-js": "^2.4.1",
-    "jquery": "^3.2.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "material-css": "^0.7.0",
+    "materialize-css": "^0.100.1",
     "ng-semantic": "^1.1.13",
     "ng2-semantic-ui": "^0.9.2",
+    "stylus": "^0.54.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
