--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "instantsearch.js": "^2.0.2",
+    "instantsearch.js": "^2.1.2",
     "jquery": "^2.2.4",
     "material-css": "^0.7.0",
     "materialize-css": "^0.100.2",
     "ng-semantic": "^1.1.13",
     "ng2-semantic-ui": "^0.9.2",
+    "react": "^15.6.1",
     "stylus": "^0.54.5",
     "zone.js": "^0.8.4"
   },
