--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ng-semantic": "^1.1.13",
     "ng2-semantic-ui": "^0.9.2",
     "react": "^15.6.1",
+    "react-instantsearch": "^4.1.0",
     "stylus": "^0.54.5",
     "zone.js": "^0.8.4"
   },
