--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/jquery": "^3.2.12",
     "algoliasearch": "^3.24.3",
     "angular2-materialize": "^15.1.9",
+    "angularfire2": "^4.0.0-rc.2",
     "code-point-at": "^1.1.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.3.0",
     "hammerjs": "^2.0.8",
     "instantsearch.js": "^2.0.2",
     "jquery": "^2.2.4",
